<resources>
    <string name="app_name">Rick and Mortypedia</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="karakter">Character</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="back_button">Back Button</string>
    <string name="loading_state_text">Please Wait…</string>
    <string name="search_name">Search Name</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="choose_status">Choose Status</string>
    <string name="search_species">Search Species</string>
    <string name="search_type">Search Type</string>
    <string name="cari_karakter">Search character</string>
    <string name="indomie_goreng">Indomie Goreng</string>
    <string name="judul">Title</string>
    <string name="detail">Detail</string>
    <string name="daftar_favorit">Favorite list</string>
    <string name="open_filter">Open Filter</string>
    <string name="search_name_location">Search name location</string>
    <string name="search_type_location">Search type location</string>
    <string name="search_dimension_location">Search dimension location</string>
    <string name="cari_location">Search location</string>
    <string name="search_button">Search Button</string>
    <string name="search_episode">Search Episode</string>
    <string name="logo">Logo</string>
    <string name="favorite">Favorite</string>
    <string name="name">Name</string>
    <string name="pilot">Pilot</string>
    <string name="type">Type</string>
    <string name="space_station">Space station</string>
    <string name="dimension">Dimension</string>
    <string name="created">Created</string>
    <string name="_2017_11_10t12_56_36_618z">2017–11–10T12:56:36.618Z</string>
    <string name="character">Character</string>
    <string name="detail_image">Detail Image</string>
    <string name="jerry_smith">Jerry Smith</string>
    <string name="status">Status</string>
    <string name="alive">Alive</string>
    <string name="spesies">Spesies</string>
    <string name="human">Human</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="earth_replacement_dimension">Earth (Replacement Dimension)</string>
    <string name="origin">Origin</string>
    <string name="episode">Episode</string>
    <string name="air_date">Air Date</string>
    <string name="december_2_2013">December 2, 2013</string>
    <string name="episode_tidak_ditemukan">Episode not found</string>
    <string name="tidak_ada_koneksi_internet">No internet connection</string>
    <string name="ok">OK</string>
    <string name="karakter_tidak_ditemukan">Character not found</string>
    <string name="lokasi_tidak_ditemukan">Location not found</string>
    <string name="berhasil_menghapus_favorite">Success delete favorite %s</string>
    <string name="berhasil_menambah_favorite">Success add favorite %s</string>
    <string name="detail_episode">Detail Episode</string>
    <string name="unknown">Unknown</string>
    <string name="detail_karakter">Detail character</string>
    <string name="location_tidak_ditemukan">Location not found</string>
    <string name="detail_location">Detail Location</string>
    <string name="daftar_favorite">Daftar Favorite</string>
    <string name="tentang_aplikasi_ini">About this application</string>
    <string name="penjelasan_rick_and_morty">Rick and Morty merupakan sebuah serial animasi yang bercerita tentang pertualangan seorang ilmuan genius benama Rick yang membawa cucu pemalunya bernama Morty dalam petualangan sangat berbahaya menjelajahi alam semesta.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="image_close">Image Close</string>
    <string name="overview">Overview</string>

    <string-array name="gender">
        <item>all</item>
        <item>male</item>
        <item>female</item>
        <item>genderless</item>
        <item>unknown</item>
    </string-array>
    <string-array name="status">
        <item>all</item>
        <item>alive</item>
        <item>dead</item>
        <item>unknown</item>
    </string-array>
</resources>