<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/abuabumuda"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.location.activity.DetailLocationActivity">

        <include
            android:id="@+id/detail_location_toolbar"
            layout="@layout/detail_toolbar" />

        <LinearLayout
            android:id="@+id/rl_favorit_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_14_white"
            android:orientation="horizontal"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_location_toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/favorite"
                android:textColor="@color/hitam"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_favorit_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/favorite_outline"
                android:button="@null"
                android:checked="false" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_detail_location"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_14_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_favorit_detail_location">

            <TextView
                android:id="@+id/tv_name_tag"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_below="@id/tv_name_tag"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/pilot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/tv_name"
                android:id="@+id/tv_type_tag"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_type"
                android:layout_below="@id/tv_type_tag"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/space_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/tv_type"
                android:id="@+id/tv_dimension_tag"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_dimension"
                android:layout_below="@id/tv_dimension_tag"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/tv_dimension"
                android:id="@+id/tv_created_tag"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_created"
                android:layout_below="@id/tv_created_tag"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/_2017_11_10t12_56_36_618z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="15dp"
            android:background="@drawable/shape_tp_tr_14_white"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/rl_detail_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_character_tag"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/hitam"
                android:text="@string/character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_location"
                android:layout_below="@id/tv_character_tag"
                tools:listitem="@layout/item_karakter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>