<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp">

    <EditText
        android:id="@+id/et_search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:background="@drawable/search_input_radius"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/search_name_location"
        android:inputType="textAutoCorrect"
        android:paddingHorizontal="25dp"
        android:paddingVertical="16dp"
        android:textColorHint="@color/hitam"
        app:iconifiedByDefault="false" />

    <EditText

        android:id="@+id/et_search_type"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_search_name"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:autofillHints=""
        android:background="@drawable/search_input_radius"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/search_type_location"
        android:inputType="textAutoCorrect"
        android:paddingHorizontal="25dp"
        android:paddingVertical="16dp"
        android:textColorHint="@color/hitam"
        app:iconifiedByDefault="false" />

    <EditText
        android:layout_marginHorizontal="20dp"
        android:id="@+id/et_search_dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_search_type"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:autofillHints=""
        android:background="@drawable/search_input_radius"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/search_dimension_location"
        android:inputType="textAutoCorrect"
        android:paddingHorizontal="25dp"
        android:paddingVertical="16dp"
        android:textColorHint="@color/hitam"
        app:iconifiedByDefault="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_location_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_search_dimension"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_18_blue"
        android:drawableStart="@drawable/baseline_search_24_white"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:text="@string/cari_location"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>